Fixed spacing on project. Remove second logo.

--- a/style.css
+++ b/style.css
@@ -671,6 +671,9 @@
 .bpost-02{
      background-image:url('images/s44.png');
 }
+.bpost-03{
+     background-image:url('images/cb_sized.png');
+}
  .news-featured-image img{
      display:none;
 }
